--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,7 +42,7 @@ test:
 about:
   home: https://www.glfw.org/
   license: zlib
-  license_file: COPYING.txt
+  license_file: LICENSE.md
   summary: 'Open Source, multi-platform library for OpenGL, OpenGL ES and Vulkan application development.'
 
   # The remaining entries in this section are optional, but recommended
