add inspect linkage again?

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,7 @@ requirements:
 test:
   commands:
     - test -f $PREFIX/lib/libglfw${SHLIB_EXT}                # [unix]
+    - conda inspect linkages -p $PREFIX $PKG_NAME            # [unix]
     - if not exist %PREFIX%/Library/lib/glfw3dll.lib exit 1  # [win]
     - if not exist %PREFIX%/Library/bin/glfw3.dll exit 1     # [win]
 
