--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,10 +1,12 @@
 build_platform:
   osx_arm64: osx_64
+  linux_aarch64: linux_aarch64
+  linux_ppc64le: linux_ppc64le
 conda_forge_output_validation: true
 github:
   branch_name: main
   tooling_branch_name: main
 provider:
-  linux_aarch64: default
-  linux_ppc64le: default
+  linux_aarch64: azure
+  linux_ppc64le: azure
 test_on_native_only: true
