--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -2,6 +2,8 @@ build_platform:
   osx_arm64: osx_64
   linux_aarch64: linux_aarch64
   linux_ppc64le: linux_ppc64le
+os_version:
+  linux_64: cos7
 conda_forge_output_validation: true
 github:
   branch_name: main
