--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,11 @@
-{% set name = "glfw" %}
 {% set version = "3.5.0" %}
 
 package:
-  name: {{ name|lower }}
+  name: glfw
   version: {{ version }}
 
 source:
-  url: https://github.com/{{ name }}/{{ name }}/archive/{{ version }}.tar.gz
+  url: https://github.com/glfw/glfw/archive/{{ version }}.tar.gz
   sha256: 1abba4007c81bb3c21dad0f1cfff65cf71a5f92d1421016ce7eb236c7458ba9f
   patches:
     # Mostly taken from
@@ -30,6 +29,7 @@ requirements:
     - ninja                  # [win]
     - make                   # [unix]
   host:
+    - xorg-xorgproto	       # [linux]
     - xorg-libx11            # [linux]
     - xorg-libxrandr         # [linux]
     - xorg-libxinerama       # [linux]
