--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ build:
   number: 0
   # https://abi-laboratory.pro/index.php?view=timeline&l=glfw
   run_exports:
-    - {{ pin_subpackage(name, max_pin='x') }}
+    - {{ pin_subpackage('glfw', max_pin='x') }}
 
 requirements:
   build:
